# pdf_workspace

./: .gitignore  README.md  chunker.py  chunker2.py  pyproject.toml  spinner.py  splitter.py  tmp.py  tmp2.py  zipper.py
