[tool.poetry]
name = "pdf-workspace"
version = "0.1.0"
description = ""
authors = ["Yohei Okubo <okubo.yohei@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_workspace"}]

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^2.12.1"
more-itertools = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
